<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:textSize="48sp"
        android:text=""
        android:gravity="end|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:textSize="20sp"
            android:id="@+id/btnSeven"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
             />
        <Button
            android:textSize="20sp"
            android:id="@+id/btnEight"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"/>
        <Button
            android:textSize="20sp"

            android:id="@+id/btnNine"
            android:layout_margin="2dp"
            android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"/>
        <Button
            android:textSize="20sp"
            android:onClick="onOperator"
            android:id="@+id/btnDivide"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/divide"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:textSize="20sp"

            android:id="@+id/btnFour"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            />
        <Button
            android:textSize="20sp"
            android:onClick="onDigit"
            android:id="@+id/btnFive"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"/>
        <Button
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"/>
        <Button
            android:textSize="20sp"
            android:onClick="onOperator"
            android:id="@+id/btnMultiply"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:textSize="20sp"
            android:onClick="onDigit"
            android:id="@+id/btnOne"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            />
        <Button
            android:textSize="20sp"
            android:onClick="onDigit"
            android:id="@+id/btnTwo"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"/>
        <Button
            android:textSize="20sp"
            android:onClick="onDigit"
            android:id="@+id/btnThree"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"/>
        <Button
            android:onClick="onOperator"
            android:textSize="20sp"
            android:id="@+id/btnSub"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtract"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:textSize="20sp"
            android:onClick="onDec"
            android:id="@+id/btnDec"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Dec"/>
        <Button
            android:textSize="20sp"
            android:onClick="onDigit"
            android:id="@+id/btnZero"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            />
        <Button
            android:textSize="20sp"
            android:onClick="onOperator"
            android:layout_margin="2dp"
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button

            android:textSize="20sp"
            android:id="@+id/btnEquals"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="result"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/equals"
            />
        <Button
            android:onClick="clear"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/clr"
            />

    </LinearLayout>


</LinearLayout>